updated Meta Desc SEO

--- a/Content/BlendingModeList.htm
+++ b/Content/BlendingModeList.htm
@@ -2,6 +2,7 @@
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
         <link href="Resources/TableStyles/PWTableStyle.css" rel="stylesheet" MadCap:stylesheetType="table" />
+        <meta name="description" content="Standard Photoshop image blending modes. Includes modes like Multiply, which darkens images; Screen, which lightens; and Overlay, which adjusts based on the area's darkness or lightness. Additional modes like Dodge, Burn, Soft Light, and Hard Light modify brightness and contrast to achieve diverse effects. This list also covers Difference, Exclusion, and colour-related modes such as Saturation, Hue, Color, and Luminosity, enabling precise control over photo blending." MadCap:metaTagSet="Meta Tag Sets/MetaTagSet.flmeta" />
     </head>
     <body>
         <h1>Blending Mode List</h1>
