--- a/Content/WhatIsImageBlending.htm
+++ b/Content/WhatIsImageBlending.htm
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
+        <meta name="description" content="Image blending allows you to merge or compose two photos into one image. Move, rotate, and scale the foreground image to fit the background, choose a blending mode, and adjust the image's transparency. Use image masks to create transparent or superimposed sections for better composition." MadCap:metaTagSet="Meta Tag Sets/MetaTagSet.flmeta" />
     </head>
     <body>
         <h1>What is Image Blending?</h1>
