--- a/Content/Welcome.htm
+++ b/Content/Welcome.htm
@@ -19,16 +19,16 @@
             </div>
             <div>
                 <p>
-                    <img src="Resources/Images/PhotoWizardCaps - 4.jpeg" class="welcome" />
+                    <img src="Resources/Images/PW_RoseMask2.jpeg" class="welcome" style="width: 148px;height: 261px;" />
                 </p>
-                <p><a href="WhatAreEffects.htm">Image Effects</a>
+                <p><a href="WhatIsMasking.htm">What is Masking?</a>
                 </p>
             </div>
             <div>
                 <p>
-                    <img src="Resources/Images/SampleImagePW - 1.jpeg" class="welcome" />
+                    <img src="Resources/Images/PW_AddText10.png" class="welcome" />
                 </p>
-                <p><a href="CreatingAnImageMask.htm">Creating an Image Mask</a>
+                <p><a href="AddingTextToImages.htm">Adding Text to Images</a>
                 </p>
             </div>
         </div>
