updated blending two images task

--- a/Content/BlendingTwoImages.htm
+++ b/Content/BlendingTwoImages.htm
@@ -8,10 +8,10 @@
         <h1>Blending Two Images</h1>
         <ol>
             <li>
-                <p>Start with one image loaded into PhotoWizard.</p>
+                <p>Start with the background image loaded into PhotoWizard.</p>
             </li>
         </ol>
-        <h2>Load the Second Image</h2>
+        <h2>Load the Foreground Image</h2>
         <ol MadCap:continue="true">
             <li>
                 <p>First, select Tools. </p>
@@ -23,24 +23,35 @@
                 </p>
             </li>
             <li>
-                <p>Then, from the Blend Image toolbar, select the second image.</p>
+                <p>Then, from the Blend Image toolbar, select and load the foreground image.</p>
                 <p>
                     <img src="Resources/Images/BlendImageToolbar.png" class="thumbnail" />
                 </p>
             </li>
             <li>
-                <p>You now have two images to work with. Use touch gestures to resize, rotate, and reposition the foreground image using the image handles. </p>
+                <p>You now have a foreground and background image to blend.</p>
                 <p>
-                    <img src="Resources/Images/PW_BlendImages_Two.png" class="thumbnail" />
+                    <img src="Resources/Images/PW_BlendImg_1.png" class="thumbnail" />
                 </p>
             </li>
         </ol>
-        <h2>Adjust Image Settings</h2>
+        <h2>Resize and Reposition Foreground Image</h2>
         <ol MadCap:continue="true">
             <li>
-                <p>Touch the menu item triangle with three dots above it to bring up the four blending options.</p>
+                <p>Touch-drag the box handles to resize and rotate the foreground image. </p>
+                <p>Two-finger drag inside the box to reposition the foreground image.</p>
                 <p>
-                    <img src="Resources/Images/PW_BlendImages_AdjustImage.png" class="thumbnail" />
+                    <img src="Resources/Images/PW_BlendImg_2.png" class="thumbnail" />
+                </p>
+            </li>
+        </ol>
+        <h2>Adjust Foreground Image Settings</h2>
+        <ol MadCap:continue="true">
+            <li>
+                <p>Touch the top menu triangle with three dots above it to access the foreground image options.</p>
+                <p>Use these to control the foreground image or swap it with the background image.</p>
+                <p>
+                    <img src="Resources/Images/PW_BlendImg_3.png" class="thumbnail" />
                 </p>
             </li>
         </ol>
@@ -72,26 +83,26 @@
                 </tr>
             </tbody>
         </table>
+        <h2>Select Blending Mode and Opacity</h2>
         <ol MadCap:continue="true">
             <li>
-                <p>Use these blending options to control the behaviour of the foreground image or swap it with the background image.</p>
-            </li>
-        </ol>
-        <h2>Choose Blending Mode and Opacity</h2>
-        <ol MadCap:continue="true">
-            <li>
-                <p>Now touch the top menu Gear Icon to bring up the blending modes and opacity dialogue.</p>
+                <p>Now touch the top menu Gear icon to bring up the <a href="BlendingModeList.htm">blending modes</a> and opacity dialogue. </p>
+                <p>Experiment with these two options until you like your blended image.</p>
                 <p>
-                    <img src="Resources/Images/PW_BlendImagesInst.png" class="thumbnail" />
+                    <img src="Resources/Images/PW_BlendImg4.png" class="thumbnail" />
                 </p>
             </li>
+        </ol>
+        <h2>Save Your Blended Image</h2>
+        <ol MadCap:continue="true">
             <li>
-                <p>Experiment with various blending modes and opacities.</p>
-            </li>
-            <li>
-                <p>When you are happy with your blended image, touch the check mark in the top menu bar to keep your changes.</p>
+                <p>When you're happy with your text edits, touch the check mark in the top menu to keep your results.</p>
+                <p>
+                    <img src="Resources/Images/PW_BlendImg5.png" class="thumbnail" />
+                </p>
             </li>
         </ol>
+        <p>Congratulations! You have successfully blended two images!</p>
         <p>&#160;</p>
         <h4>NOTES:</h4>
         <div class="note">You have creative control over which parts of your images are combined by masking your background image. </div>
