fixed image width

--- a/Content/BlendingTwoImages.htm
+++ b/Content/BlendingTwoImages.htm
@@ -19,7 +19,7 @@
             <li>
                 <p>Then select Blend Images.</p>
                 <p>
-                    <img src="Resources/Images/PW_BlendImages_Step1.png" class="thumbnail" style="width: 39px;height: 46px;" />
+                    <img src="Resources/Images/PW_BlendImg_1a.png" class="thumbnail" />
                 </p>
             </li>
             <li>
